@@ -24,6 +24,7 @@ Version 6.7 - not yet released
 * devices
   - "debug" button
   - more robust midnight wraparound handling (#2857)
+  - new driver from Cambridge L-Nav
 * Android
   - support IOIO via OpenAccessory (Android 4.x)
 
